--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "node-forge": "^1.3.1",
+    "tweetnacl-util": "^0.15.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.14",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -24,6 +33,6 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "typescript": "~4.9.3"
   }
 }
