--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node-forge": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
