--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-messenger-frontend",
+  "name": "vue-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,19 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
-    "@vuelidate/core": "^2.0.2",
-    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "node-forge": "^1.3.1",
     "tweetnacl-util": "^0.15.1",
+    "vee-validate": "^4.8.4",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.14",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/node-forge": "^1.3.2",
